<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_shelf"
            android:icon="@drawable/ic_shelf"
            android:title="@string/my_shelf" />
        <item
            android:id="@+id/nav_stand"
            android:icon="@drawable/ic_stand"
            android:title="@string/my_stand" />
        <item
            android:id="@+id/nav_pending"
            android:icon="@drawable/ic_update"
            android:title="@string/pending_requests"/>
        <item
            android:id="@+id/search_users"
            android:actionLayout="@android:drawable/ic_search_category_default"
            android:icon="@android:drawable/ic_search_category_default"
            android:title="Search Users" />
    </group>

</menu>
